# SDL-Test-game

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  appveyor.yml
cmake/: FindBox2D.cmake
engine/: CMakeLists.txt
engine/ecs/: Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  World.h
engine/graphics/: IWindow.h
engine/graphics/SDL/: SDLWindow.cpp  SDLWindow.h
game/: CMakeLists.txt
game/src/: main.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/ecs/: test.cpp
